Fix night mode navbar color on mobile screens

--- a/components/navbar/styles.sass
+++ b/components/navbar/styles.sass
@@ -43,8 +43,7 @@ nav.Navbar
     text-decoration: none
     transition: all 350ms ease-in-out
 
-    &:hover
-      background: var(--color-red-dark)
+   
 
     svg, img
       height: 1em
@@ -62,12 +61,10 @@ nav.Navbar
       position: absolute
       top: 0
       right: 0
-      background: var(--color-red)
       padding: 1em
       text-align: left
       z-index: 1
       box-shadow: -5px 0 10px rgba(0, 0, 0, 0.3) 
-
       a
         padding: 1em
         display: flex
